Added Pair and custom Lists. Fixed all character cards' effects.