@@ -2,10 +2,11 @@ package it.polimi.ingsw.model.cards;
 
 import it.polimi.ingsw.enums.CharacterType;
 import it.polimi.ingsw.enums.StudentColor;
+import it.polimi.ingsw.util.LinkedPairList;
+import it.polimi.ingsw.util.Pair;
 
 import java.util.EnumMap;
 import java.util.List;
-import java.util.Map;
 
 public class Friar extends CharacterCard {
 
@@ -26,11 +27,11 @@ public class Friar extends CharacterCard {
     }
 
     @Override
-    public boolean applyEffect(EffectHandler effectHandler, EnumMap<StudentColor, List<Integer>> pairs) {
-        for (Map.Entry<StudentColor, List<Integer>> entry: pairs.entrySet()) {
-            StudentColor s = entry.getKey();
-            if (students.get(s) > 0) {
-                if (effectHandler.addStudentToIsland(s, entry.getValue().get(0), entry.getValue().get(1))) {
+    public boolean applyEffect(EffectHandler effectHandler, LinkedPairList<StudentColor, List<Integer>> pairs) {
+        for (Pair<StudentColor, List<Integer>> pair: pairs) {
+            StudentColor s = pair.getFirst();
+            if (s != null && students.get(s) > 0 && pair.getSecond().size() >= 2) {
+                if (effectHandler.addStudentToIsland(s, pair.getSecond().get(0), pair.getSecond().get(1))) {
                     students.replace(s, students.get(s) - 1);
                     additionalCost++;
                     s = effectHandler.getStudentFromBag();
